test/rules/single_criterion/image/contains_any/config.json
{
  "description": "Test single criteria rule (image contains any of nginx or redis)",
  "runKwctl": false    ,
  "testWorkspace": "../fixtures/",
  "accept": [
    "deployments/normal.yaml",
    "deployments/image_allowed.yaml"
  ],
  "reject": [
    "deployments/image_nginx.yaml",
    "deployments/image_redis.yaml"
  ]
}
